fixed styles and added isVisible

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -19,11 +19,12 @@
 
 // Modal
 .title {
-  font-size: 20px;
+  font-size: 23px;
   text-transform: uppercase;
   color: $modal-title-color;
   font-weight: 700;
   line-height: 38px;
+  padding-bottom: 6px;
 
   @include tablet {
     font-size: 32px;
@@ -34,7 +35,7 @@
 .text {
   font-weight: 400;
   line-height: 28px;
-  font-size: 16px;
+  font-size: 18px;
 
   @include tablet {
     font-size: 24px;
