--- a/src/ui/layout/body/Body.module.scss
+++ b/src/ui/layout/body/Body.module.scss
@@ -9,4 +9,5 @@
 
 .content {
   align-self: center;
+  position: relative;
 }
